Update notebook code

--- a/cls_tags.ipynb
+++ b/cls_tags.ipynb
@@ -391,7 +391,7 @@
     "\n",
     "tab_dataframe.dropna(inplace = True) \n",
     "   \n",
-    "tab_dataframe[\"tags\"]= tab_dataframe[\"tags\"].str.split(\".\", n = 1, exp) \n",
+    "tab_dataframe[\"tags\"]= tab_dataframe[\"tags\"].str.split('.') \n",
     "tab_dataframe"
    ]
   },
