--- a/cls_tags.ipynb
+++ b/cls_tags.ipynb
@@ -4,47 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\miniconda3\\envs\\deep\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:516: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "d:\\miniconda3\\envs\\deep\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:517: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "d:\\miniconda3\\envs\\deep\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:518: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "d:\\miniconda3\\envs\\deep\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:519: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "d:\\miniconda3\\envs\\deep\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:520: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "d:\\miniconda3\\envs\\deep\\lib\\site-packages\\tensorflow\\python\\framework\\dtypes.py:525: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
-      "d:\\miniconda3\\envs\\deep\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
-      "d:\\miniconda3\\envs\\deep\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
-      "d:\\miniconda3\\envs\\deep\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
-      "d:\\miniconda3\\envs\\deep\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
-      "d:\\miniconda3\\envs\\deep\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
-      "d:\\miniconda3\\envs\\deep\\lib\\site-packages\\tensorboard\\compat\\tensorflow_stub\\dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
-      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000\n",
-      "2000\n",
-      "3000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import absolute_import, division, print_function, unicode_literals\n",
     "\n",
@@ -73,11 +33,13 @@
    "source": [
     "# Get dataframe with tags and category_id columns\n",
     "csvpath = 'data\\CAvideos.csv'\n",
-    "tab_dataframe = get_tags_and_labels_df(csvpath)\n",
-    "max_of_tags = 124\n",
+    "tab_dataframe = load_tags_and_labels_df(csvpath)\n",
+    "max_of_tags = 15\n",
+    "\n",
+    "vocab = get_vocab(tab_dataframe['tags'])\n",
     "tab_dataframe = create_seperate_columns(tab_dataframe, max_of_tags, 'tags')\n",
     "\n",
-    "tab_dataframe.mode()"
+    "tab_dataframe.head()"
    ]
   },
   {
@@ -86,9 +48,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Getting leaning vocab\n",
-    "vocab = get_vocab(tab_dataframe['tags'])\n",
-    "\n",
     "# Convert vocab to dictionary\n",
     "voc_di = {i: vo for i, vo in enumerate(vocab)}\n",
     "voc_di[0] = 'notags'\n",
@@ -108,10 +67,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "threshold = 1000 # Anything that occurs less than this will be removed.\n",
-    "value_counts = tab_dataframe.stack().value_counts() # Entire DataFrame \n",
-    "to_remove = value_counts[value_counts <= threshold].index\n",
-    "tab_dataframe.replace(to_remove, np.nan, inplace=True)\n"
+    "future_df = []\n",
+    "col_row_dict = {}\n",
+    "# We only use first half of dataset\n",
+    "first_half_df = tab_dataframe[:20000]"
    ]
   },
   {
@@ -120,28 +79,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "future_df = []\n",
-    "col_row_dict = {}\n",
-    "\n",
-    "for i in range(0, 40881):\n",
-    "    for col in tab_dataframe.columns:\n",
+    "for i in range(0, 20000):\n",
+    "    for col in first_half_df.columns:\n",
     "        if col == 'category_id':\n",
-    "            col_row_dict.update({'category_id':tab_dataframe[col][i]})\n",
+    "            col_row_dict.update({'category_id':first_half_df[col][i]})\n",
     "        else:\n",
-    "            col_row_dict.update({'tag{}'.format(tab_dataframe[col][i]):1.0})\n",
+    "            col_row_dict.update({'tag{}'.format(first_half_df[col][i]):1.0})\n",
     "    future_df.append(col_row_dict)\n",
     "    col_row_dict = {}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "future_df[1:3]"
    ]
   },
   {
@@ -152,7 +97,7 @@
    "source": [
     "voc_fd_list = []\n",
     "\n",
-    "temp = pd.DataFrame(future_df[0:25000])\n",
+    "temp = pd.DataFrame(future_df[:10000])\n",
     "temp.fillna(0.0, inplace = True)\n",
     "voc_fd_list.append(temp)"
    ]
@@ -163,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp = pd.DataFrame(future_df[25000:])\n",
+    "temp = pd.DataFrame(future_df[10000:])\n",
     "temp.fillna(0.0, inplace = True)\n",
     "voc_fd_list.append(temp)"
    ]
@@ -174,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df = pd.merge(voc_df_list[0], voc_df_list[1], on='category_id')\n",
+    "merged_df = pd.merge(voc_fd_list[0], voc_fd_list[1], on='category_id')\n",
     "merged_df.head()"
    ]
   },
