Perform evaluation on test data with 84% accuracy

--- a/cls_tags.ipynb
+++ b/cls_tags.ipynb
@@ -1116,18 +1116,23 @@
       "metadata": {
         "id": "9i3WGhXCx7P-",
         "colab_type": "code",
+        "outputId": "1f1c414d-bb0a-411d-8d72-e6462230b739",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 574
-        },
-        "outputId": "1f1c414d-bb0a-411d-8d72-e6462230b739"
+        }
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "history_dict = history.history\n",
+        "acc = history_dict['acc']\n",
+        "val_acc = history_dict['val_acc']\n",
+        "loss = history_dict[loss'']\n",
+        "val_loss = history_dict['val_loss']\n",
         "\n",
-        "plt.plot(history.history['acc'])\n",
-        "plt.plot(history.history['val_acc'])\n",
+        "plt.plot(acc)\n",
+        "plt.plot(val_acc)\n",
         "plt.title('model accuracy')\n",
         "plt.ylabel('accuracy')\n",
         "plt.xlabel('epoch')\n",
@@ -1135,15 +1140,15 @@
         "plt.show()\n",
         "\n",
         "# summarize history for loss\n",
-        "plt.plot(history.history['loss'])\n",
-        "plt.plot(history.history['val_loss'])\n",
+        "plt.plot(loss)\n",
+        "plt.plot(val_loss)\n",
         "plt.title('model loss')\n",
         "plt.ylabel('loss')\n",
         "plt.xlabel('epoch')\n",
         "plt.legend(['train', 'val'], loc='upper left')\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1168,6 +1173,34 @@
           "metadata": {
             "tags": []
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ioAOt_5z8AqB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "edf73c53-74f9-442c-fe21-d55889aad8f3"
+      },
+      "source": [
+        "results = model.evaluate(test_ds, test_lb)\n",
+        "\n",
+        "print(results)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2000/2000 [==============================] - 1s 719us/sample - loss: 0.8179 - acc: 0.8475\n",
+            "[0.8178716907501221, 0.8475]\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
