--- a/cls_tags.ipynb
+++ b/cls_tags.ipynb
@@ -3361,11 +3361,28 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "J6Sg5kZ031wf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "final_dataframe = [pd.DataFrame(future_df)]\n",
+        "final_dataframe[0].fillna(0.0, inplace = True)\n",
+        "final_dataframe[0].head()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "bB8h5DAr3PSN",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
+        "future_df = []\n",
+        "\n",
         "for i in range(28000, 56000):\n",
         "    for col in second_half_df.columns:\n",
         "        if col == 'category_id':\n",
@@ -3390,10 +3407,9 @@
         }
       },
       "source": [
-        "final_dataframe = pd.DataFrame(future_df)\n",
-        "final_dataframe.fillna(0.0, inplace = True)\n",
-        "from input_generator import load_dataset_with_lables\n",
-        "final_dataframe.head()"
+        "final_dataframe = [pd.DataFrame(future_df)]\n",
+        "final_dataframe[1].fillna(0.0, inplace = True)\n",
+        "final_dataframe[1].head()"
       ],
       "execution_count": 10,
       "outputs": [
@@ -3945,6 +3961,21 @@
           "execution_count": 10
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lCJo1xP13nPv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "final_dataframe += [pd.DataFrame(future_df)]\n",
+        "final_dataframe[0].fillna(0.0, inplace = True)\n",
+        "final_dataframe[0].head()"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
